--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        hola
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
