--- a/index.html
+++ b/index.html
@@ -4,13 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My fitness pal</title>
 </head>
 <body>
     <header>
-        hola
+        hola1
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <h1>my fitness pal</h1>
+        <style>
+
+
+            li {
+              display: inline;
+            }
+            </style>
+        
+        <ul>
+            <li><a href="#recetas">recetas</a></li>
+            <li><a href="#entrenamiento">entrenamiento</a></li>
+            <li><a href="#perdida de peso">perdida de peso</a></li>
+            <li><a href="#masa muscular">masa muscular</a></li>
+          </ul>
+    
+        <p>  Imagen 1:</p>
+        <img src="" alt="" height="1000"  width="">
+
+    </main>
+    <table>   
+        <th><tr>nombre</tr></th>
+        <th><tr>apellido</tr></th>
+    </table>
+
 </body>
 </html>
